--- a/8_OpenSource_ALL/SISCRUD/frontend/crud/index.html
+++ b/8_OpenSource_ALL/SISCRUD/frontend/crud/index.html
@@ -28,7 +28,7 @@
                         <th scope="col">#ID</th>
                         <th scope="col">Nome</th>
                         <th scope="col">Sobrenome</th>
-                        <th scope="col">email</th>
+                        <th scope="col" class="th-email">email</th>
                         <th scope="col">ações</th>
                     </tr>
                 </thead>
@@ -37,36 +37,36 @@
                         <th scope="row">1</th>
                         <td>Hugo</td>
                         <td>Régis</td>
-                        <td>hugo@email.com</td>
+                        <td class="th-email">hugo@email.com</td>
                         <td><button class="btn-ver">VER</button>&emsp;<button
-                                class="btn-editar">EDITAR</button>&emsp;<button class="btn-excluir">EXCLUIR</button>
+                                class="btn-editar">EDITAR</button><br><button class="btn-excluir">EXCLUIR</button>
                         </td>
                     </tr>
                     <tr>
                         <th scope="row">2</th>
                         <td>Amet</td>
                         <td>Alias</td>
-                        <td>amet@mail</td>
+                        <td class="th-email">amet@mail</td>
                         <td><button class="btn-ver">VER</button>&emsp;<button
-                                class="btn-editar">EDITAR</button>&emsp;<button class="btn-excluir">EXCLUIR</button>
+                                class="btn-editar">EDITAR</button><br><button class="btn-excluir">EXCLUIR</button>
                         </td>
                     </tr>
                     <tr>
                         <th scope="row">3</th>
                         <td>Elit</td>
                         <td>Facere</td>
-                        <td>elit@mail</td>
+                        <td class="th-email">elit@mail</td>
                         <td><button class="btn-ver">VER</button>&emsp;<button
-                                class="btn-editar">EDITAR</button>&emsp;<button class="btn-excluir">EXCLUIR</button>
+                                class="btn-editar">EDITAR</button><br><button class="btn-excluir">EXCLUIR</button>
                         </td>
                     </tr>
                     <tr>
                         <th scope="row">4</th>
                         <td>Itaque</td>
                         <td>Velit</td>
-                        <td>itaque@mail</td>
+                        <td class="th-email">itaque@mail</td>
                         <td><button class="btn-ver">VER</button>&emsp;<button
-                                class="btn-editar">EDITAR</button>&emsp;<button class="btn-excluir">EXCLUIR</button>
+                                class="btn-editar">EDITAR</button><br><button class="btn-excluir">EXCLUIR</button>
                         </td>
                     </tr>
                 </tbody>
