--- a/8_OpenSource_ALL/SISCRUD/frontend/cadastro/index.html
+++ b/8_OpenSource_ALL/SISCRUD/frontend/cadastro/index.html
@@ -20,11 +20,13 @@
 
     <div id="sistema">
         <div id="form">
-            <h1>SISTEMA</h1>
+            <h1>CADASTRO (FAZENDO)</h1>
             <br><input style="width: 100%; height: 40px;" type="text" placeholder="usuário"><br>
             <br><input style="width: 100%; height: 40px;" type="password" placeholder="senha"><br>
-            <br><button id="btn-entrar">ENTRAR</button><br>
-            <br><a href="/8_OpenSource_ALL/SISCRUD/frontend/cadastro/">Não possui uma conta?<br>Cadastre-se aqui!</a>
+            <br><input style="width: 100%; height: 40px;" type="text" placeholder="nome completo"><br>
+            <br><input style="width: 100%; height: 40px;" type="text" placeholder="cpf"><br>
+            <br><input style="width: 100%; height: 40px;" type="text" placeholder="email"><br>
+            <br><button id="btn-cadastrar">CADASTRAR</button><br>
         </div>
     </div>
 
