--- a/8_OpenSource_ALL/SISCRUD/frontend/crud/index.html
+++ b/8_OpenSource_ALL/SISCRUD/frontend/crud/index.html
@@ -72,7 +72,7 @@
                 </tbody>
             </table>
         </div>
-        <button class="btn-cadastrar">CADASTRAR</button>
+        <button class="btn-cadastrar"> <a href="/8_OpenSource_ALL/SISCRUD/frontend/cadastro/">CADASTRAR</a></button>
     </div>
 
     <a href="/8_OpenSource_ALL/SISCRUD/frontend/">Atalho Login</a>
