--- a/8_OpenSource_ALL/SISCRUD/frontend/cadastro/index.html
+++ b/8_OpenSource_ALL/SISCRUD/frontend/cadastro/index.html
@@ -20,7 +20,7 @@
 
     <div id="sistema">
         <div id="form">
-            <h1>CADASTRO (FAZENDO)</h1>
+            <h1>CADASTRO</h1>
             <br><input style="width: 100%; height: 40px;" type="text" placeholder="usuário"><br>
             <br><input style="width: 100%; height: 40px;" type="password" placeholder="senha"><br>
             <br><input style="width: 100%; height: 40px;" type="text" placeholder="nome completo"><br>
