--- a/8_OpenSource_ALL/SISCRUD/frontend/cadastro/index.html
+++ b/8_OpenSource_ALL/SISCRUD/frontend/cadastro/index.html
@@ -26,7 +26,7 @@
             <br><input style="width: 100%; height: 40px;" type="text" placeholder="nome completo"><br>
             <br><input style="width: 100%; height: 40px;" type="text" placeholder="cpf"><br>
             <br><input style="width: 100%; height: 40px;" type="text" placeholder="email"><br>
-            <br><button id="btn-cadastrar">CADASTRAR</button><br>
+            <br><button id="btn-cadastrar">CADASTRAR</button><button id="btn-cancelar">CANCELAR</button><br>
         </div>
     </div>
 
