--- a/0_temp_conding/0_php_mysql/3_PDO_InsertFORM/index.html
+++ b/0_temp_conding/0_php_mysql/3_PDO_InsertFORM/index.html
@@ -12,6 +12,9 @@
 <body>
     <div class="container">
 
+        <a href="viewdata.php">VIEW DATA</a>
+        <br>
+        <br>
         <form method="post" action="cadastro.php">
             Usuário: <input type="text" name="usuario" placeholder="usuário">
             <br><br>
@@ -23,14 +26,11 @@
             <br><br>
             e-mail: <input type="text" name="email" placeholder="name@mail">
             <br><br>
-            <input type="submit" name="submit" value="Submit">
+            <input class="btn-cadastrar" type="submit" name="submit" value="Submit">
         </form>
 
     </div>
 
-    <br>
-    <br>
-    <a href="viewdata.php">VIEW DATA</a>
 </body>
 
 </html>
