--- a/0_temp_conding/0_git_bootstrap_template/mytemplate/index.html
+++ b/0_temp_conding/0_git_bootstrap_template/mytemplate/index.html
@@ -10,14 +10,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
-  <title>Frontend Template</title>
+  <title>DEVWEB</title>
 </head>
 
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
     <div class="container">
-      <a href="#" class="navbar-brand">Frontend Template</a>
+      <a href="#" class="navbar-brand">DEVWEB</a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
         <span class="navbar-toggler-icon"></span>
@@ -26,13 +26,13 @@
       <div class="collapse navbar-collapse" id="navmenu">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a href="#learn" class="nav-link">What You'll Learn</a>
+            <a href="#learndiv" class="nav-link">O que você vai aprender</a>
           </li>
           <li class="nav-item">
-            <a href="#questions" class="nav-link">Questions</a>
+            <a href="#questions" class="nav-link">Perguntas</a>
           </li>
           <li class="nav-item">
-            <a href="#instructors" class="nav-link">Instructors</a>
+            <a href="#instructors" class="nav-link">Instrutores</a>
           </li>
         </ul>
       </div>
@@ -42,7 +42,7 @@
   <!-- Showcase -->
   <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
     <div class="container">
-      <div class="d-sm-flex align-items-center">
+      <div class="d-sm-flex align-items-center justify-content-between">
         <div class="mytest">
           <h1>Torne-se um <span class="text-warning"> Desenvolvedor Web </span></h1>
           <p class="lead my-4">
@@ -53,23 +53,23 @@
             Inscrever-se
           </button>
         </div>
-        <div class="imgtestecss text-center align-items-center">
-          <img class="img-fluid w-50 d-none d-sm-block" src="img/teste.svg" alt="Imagem1 AQUI" />
-        </div>
+        <!-- <div class="imgtestecss text-center align-items-center"> -->
+        <img class="img-fluid w-50 d-none d-sm-block" src="img/showcase.svg" alt="Imagem1 AQUI" />
+        <!-- </div> -->
       </div>
     </div>
   </section>
 
   <!-- Newsletter -->
-  <section class="bg-primary text-light p-5">
+  <section class="bg-primary text-light p-5 h3css">
     <div class="container">
-      <div class="d-md-flex justify-content-between align-items-center">
-        <h3 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h3>
-
-        <div class="input-group news-input">
+      <div class="d-md-flex align-items-center text-center">
+        <!-- <h3 class="mb-3 mb-md-0">Avisos Aqui :)</h3> -->
+        <!-- <h3 class="mb-3 mb-md-0 h3css">TESTE</h3> -->
+        <!-- <div class="input-group news-input">
           <input type="text" class="form-control" placeholder="Enter Email" />
           <button class="btn btn-dark btn-lg" type="button">Submit</button>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -99,7 +99,7 @@
               <div class="h1 mb-3">
                 <i class="bi bi-person-square"></i>
               </div>
-              <h3 class="card-title mb-3">Hybrid</h3>
+              <h3 class="card-title mb-3">Híbrido</h3>
               <p class="card-text">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Iure, quas quidem possimus dolorum esse eligendi?
@@ -114,7 +114,7 @@
               <div class="h1 mb-3">
                 <i class="bi bi-people"></i>
               </div>
-              <h3 class="card-title mb-3">In Person</h3>
+              <h3 class="card-title mb-3">Presencial</h3>
               <p class="card-text">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Iure, quas quidem possimus dolorum esse eligendi?
@@ -128,73 +128,76 @@
   </section>
 
   <!-- Learn Sections -->
-  <section id="learn" class="p-5">
-    <div class="container">
-      <div class="row align-items-center justify-content-between">
-        <div class="col-md">
-          <div class="imgtestecss text-center align-items-center">
-            <img src="img/teste.svg" class="img-fluid" alt="Imagem2 AQUI" />
+  <div id="learndiv" class="p-5 m-5">
+    <section id="learn" class="p-5">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-md">
+            <div class="imgtestecss text-center align-items-center">
+              <img src="img/fundamentals.svg" class="img-fluid" alt="Imagem2 AQUI" />
+            </div>
+          </div>
+          <div class="col-md p-5">
+            <h2>Aprenda a base da WEB</h2>
+            <p class="lead">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Similique deleniti possimus magnam corporis ratione facere!
+            </p>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque
+              reiciendis eius autem eveniet mollitia, at asperiores suscipit
+              quae similique laboriosam iste minus placeat odit velit quos,
+              nulla architecto amet voluptates?
+            </p>
+            <a href="#" class="btn btn-light mt-3">
+              <i class="bi bi-chevron-right"></i> Read More
+            </a>
           </div>
         </div>
-        <div class="col-md p-5">
-          <h2>Learn The Fundamentals</h2>
-          <p class="lead">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Similique deleniti possimus magnam corporis ratione facere!
-          </p>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque
-            reiciendis eius autem eveniet mollitia, at asperiores suscipit
-            quae similique laboriosam iste minus placeat odit velit quos,
-            nulla architecto amet voluptates?
-          </p>
-          <a href="#" class="btn btn-light mt-3">
-            <i class="bi bi-chevron-right"></i> Read More
-          </a>
-        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section id="learn" class="p-5 bg-dark text-light">
-    <div class="container">
-      <div class="row align-items-center justify-content-between">
-        <div class="col-md p-5">
-          <h2>Learn React</h2>
-          <p class="lead">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Similique deleniti possimus magnam corporis ratione facere!
-          </p>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque
-            reiciendis eius autem eveniet mollitia, at asperiores suscipit
-            quae similique laboriosam iste minus placeat odit velit quos,
-            nulla architecto amet voluptates?
-          </p>
-          <a href="#" class="btn btn-light mt-3">
-            <i class="bi bi-chevron-right"></i> Read More
-          </a>
-        </div>
-        <div class="col-md">
-          <div class="imgtestecss text-center align-items-center">
-            <img src="img/teste.svg" class="img-fluid" alt="Imagem3 AQUI" />
+    <section id="learn" class="p-5">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-md p-5">
+            <h2>Aprenda Frameworks</h2>
+            <p class="lead">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Similique deleniti possimus magnam corporis ratione facere!
+            </p>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque
+              reiciendis eius autem eveniet mollitia, at asperiores suscipit
+              quae similique laboriosam iste minus placeat odit velit quos,
+              nulla architecto amet voluptates?
+            </p>
+            <a href="#" class="btn btn-light mt-3">
+              <i class="bi bi-chevron-right"></i> Read More
+            </a>
+          </div>
+          <div class="col-md">
+            <div class="imgtestecss text-center align-items-center">
+              <img src="img/react.svg" class="img-fluid" alt="Imagem3 AQUI" />
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </div>
 
   <!-- Question Accordion -->
+  <div class="perguntascss"></div>
   <section id="questions" class="p-5">
     <div class="container">
-      <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+      <h2 class="text-center mb-4">Perguntas Frequentes</h2>
       <div class="accordion accordion-flush" id="questions">
         <!-- Item 1 -->
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#question-one">
-              Where exactly are you located?
+              Onde fazer?
             </button>
           </h2>
           <div id="question-one" class="accordion-collapse collapse" data-bs-parent="#questions">
@@ -214,7 +217,7 @@
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#question-two">
-              How much does it cost to attend?
+              É de graça?
             </button>
           </h2>
           <div id="question-two" class="accordion-collapse collapse" data-bs-parent="#questions">
@@ -234,7 +237,7 @@
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#question-three">
-              What do I need to Know?
+              O que eu preciso saber antes de começar?
             </button>
           </h2>
           <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#questions">
@@ -254,7 +257,7 @@
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#question-four">
-              How Do I sign up?
+              Como eu crio uma conta?
             </button>
           </h2>
           <div id="question-four" class="accordion-collapse collapse" data-bs-parent="#questions">
@@ -274,7 +277,7 @@
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#question-five">
-              Do you help me find a job?
+              O estágio é remunerado?
             </button>
           </h2>
           <div id="question-five" class="accordion-collapse collapse" data-bs-parent="#questions">
@@ -293,12 +296,12 @@
     </div>
   </section>
 
+
   <section id="instructors" class="p-5 bg-primary">
     <div class="container">
-      <h2 class="text-center text-white">Our Instructors</h2>
+      <h2 class="text-center text-white">Nossos Professores</h2>
       <p class="lead text-center text-white mb-5">
-        Our instructors all have 5+ years working as a web developer in the
-        industry
+        Nossos professores possuem mais de 5 anos de experiência.
       </p>
       <div class="row g-4">
         <div class="col-md-6 col-lg-3">
@@ -378,24 +381,24 @@
     <div class="container">
       <div class="row g-4">
         <div class="col-md">
-          <h2 class="text-center mb-4">Contact Info</h2>
+          <h2 class="text-center mb-4">Contatos e Informações</h2>
           <ul class="list-group list-group-flush lead">
             <li class="list-group-item">
-              <span class="fw-bold">Main Location:</span> 50 Main st Boston MA
+              <span class="fw-bold">Endereço:</span> Russas-CE/BR
             </li>
             <li class="list-group-item">
-              <span class="fw-bold">Enrollment Phone:</span> (555) 555-5555
+              <span class="fw-bold">Telefone escolar:</span> (555) 555-5555
             </li>
             <li class="list-group-item">
-              <span class="fw-bold">Student Phone:</span> (333) 333-3333
+              <span class="fw-bold">Telefone professor:</span> (333) 333-3333
             </li>
             <li class="list-group-item">
-              <span class="fw-bold">Enrollment Email:</span> (555)
-              enroll@frontendbc.test
+              <span class="fw-bold">Email escolar:</span> (555)
+              escola@escola.test
             </li>
             <li class="list-group-item">
-              <span class="fw-bold">Student Email:</span>
-              student@frontendbc.test
+              <span class="fw-bold">Email professor:</span>
+              prof@prof.test
             </li>
           </ul>
         </div>
@@ -409,7 +412,7 @@
   <!-- Footer -->
   <footer class="p-5 bg-dark text-white text-center position-relative">
     <div class="container">
-      <p class="lead">Copyright &copy; 2021 Frontend Bootcamp</p>
+      <p class="lead">Copyright &copy; 2022 hugonbr</p>
 
       <a href="#" class="position-absolute bottom-0 end-0 p-5">
         <i class="bi bi-arrow-up-circle h1"></i>
