--- a/0_temp_conding/1_php_bootstrap_mysql/index.html
+++ b/0_temp_conding/1_php_bootstrap_mysql/index.html
@@ -18,8 +18,8 @@
         <!-- <h2>CRUD</h2> -->
     </div>
 
-    <div class="navcss">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark navcss2">
+    <div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">CRUD TESTE</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -75,28 +75,32 @@
             <thead>
                 <tr>
                     <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
+                    <th class="th_nome" scope="col">Nome</th>
+                    <th scope="col">Usuário</th>
+                    <th class="th_email" scope="col">E-mail</th>
                     <th scope="col">Actions</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th scope="row">1</th>
-                    <td>Mark</td>
+                    <td class="th_nome">Mark</td>
                     <td>Otto</td>
-                    <td>@mdo</td>
-                    <td><button type="submit" class="btn btn-primary">Ver</button></td>
-                    <td><button type="submit" class="btn btn-warning">Alterar</button></td>
-                    <td><button type="submit" class="btn btn-danger">Excluir</button></td>
+                    <td class="th_email">@mdo</td>
+                    <td><button type="submit" class="btn btn-primary">Ver</button>
+                        <button type="submit" class="btn btn-warning">Alterar</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </td>
                 </tr>
                 <tr>
                     <th scope="row">2</th>
-                    <td>Jacob</td>
+                    <td class="th_nome">Jacob</td>
                     <td>Thornton</td>
-                    <td>@fat</td>
-                    <td><button type="submit" class="btn btn-primary">Ver</button></td>
+                    <td class="th_email">@fat</td>
+                    <td><button type="submit" class="btn btn-primary">Ver</button>
+                        <button type="submit" class="btn btn-warning">Alterar</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </td>
                 </tr>
                 <!-- <tr>
                     <th scope="row">3</th>
@@ -106,25 +110,190 @@
                 </tr> -->
                 <tr>
                     <th scope="row">3</th>
-                    <td>Larry</td>
+                    <td class="th_nome">Larry</td>
                     <td>the Bird</td>
-                    <td>@twitter</td>
-                    <td><button type="submit" class="btn btn-primary">Ver</button></td>
+                    <td class="th_email">@twitter</td>
+                    <td><button type="submit" class="btn btn-primary">Ver</button>
+                        <button type="submit" class="btn btn-warning">Alterar</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </td>
                 </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td class="th_nome">Larry</td>
+                    <td>the Bird</td>
+                    <td class="th_email">@twitter</td>
+                    <td><button type="submit" class="btn btn-primary">Ver</button>
+                        <button type="submit" class="btn btn-warning">Alterar</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td class="th_nome">Larry</td>
+                    <td>the Bird</td>
+                    <td class="th_email">@twitter</td>
+                    <td><button type="submit" class="btn btn-primary">Ver</button>
+                        <button type="submit" class="btn btn-warning">Alterar</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td class="th_nome">Larry</td>
+                    <td>the Bird</td>
+                    <td class="th_email">@twitter</td>
+                    <td><button type="submit" class="btn btn-primary">Ver</button>
+                        <button type="submit" class="btn btn-warning">Alterar</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td class="th_nome">Larry</td>
+                    <td>the Bird</td>
+                    <td class="th_email">@twitter</td>
+                    <td><button type="submit" class="btn btn-primary">Ver</button>
+                        <button type="submit" class="btn btn-warning">Alterar</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td class="th_nome">Larry</td>
+                    <td>the Bird</td>
+                    <td class="th_email">@twitter</td>
+                    <td><button type="submit" class="btn btn-primary">Ver</button>
+                        <button type="submit" class="btn btn-warning">Alterar</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td class="th_nome">Larry</td>
+                    <td>the Bird</td>
+                    <td class="th_email">@twitter</td>
+                    <td><button type="submit" class="btn btn-primary">Ver</button>
+                        <button type="submit" class="btn btn-warning">Alterar</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td class="th_nome">Larry</td>
+                    <td>the Bird</td>
+                    <td class="th_email">@twitter</td>
+                    <td><button type="submit" class="btn btn-primary">Ver</button>
+                        <button type="submit" class="btn btn-warning">Alterar</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td class="th_nome">Larry</td>
+                    <td>the Bird</td>
+                    <td class="th_email">@twitter</td>
+                    <td><button type="submit" class="btn btn-primary">Ver</button>
+                        <button type="submit" class="btn btn-warning">Alterar</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td class="th_nome">Larry</td>
+                    <td>the Bird</td>
+                    <td class="th_email">@twitter</td>
+                    <td><button type="submit" class="btn btn-primary">Ver</button>
+                        <button type="submit" class="btn btn-warning">Alterar</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td class="th_nome">Larry</td>
+                    <td>the Bird</td>
+                    <td class="th_email">@twitter</td>
+                    <td><button type="submit" class="btn btn-primary">Ver</button>
+                        <button type="submit" class="btn btn-warning">Alterar</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td class="th_nome">Larry</td>
+                    <td>the Bird</td>
+                    <td class="th_email">@twitter</td>
+                    <td><button type="submit" class="btn btn-primary">Ver</button>
+                        <button type="submit" class="btn btn-warning">Alterar</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td class="th_nome">Larry</td>
+                    <td>the Bird</td>
+                    <td class="th_email">@twitter</td>
+                    <td><button type="submit" class="btn btn-primary">Ver</button>
+                        <button type="submit" class="btn btn-warning">Alterar</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td class="th_nome">Larry</td>
+                    <td>the Bird</td>
+                    <td class="th_email">@twitter</td>
+                    <td><button type="submit" class="btn btn-primary">Ver</button>
+                        <button type="submit" class="btn btn-warning">Alterar</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td class="th_nome">Larry</td>
+                    <td>the Bird</td>
+                    <td class="th_email">@twitter</td>
+                    <td><button type="submit" class="btn btn-primary">Ver</button>
+                        <button type="submit" class="btn btn-warning">Alterar</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td class="th_nome">Larry</td>
+                    <td>the Bird</td>
+                    <td class="th_email">@twitter</td>
+                    <td><button type="submit" class="btn btn-primary">Ver</button>
+                        <button type="submit" class="btn btn-warning">Alterar</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td class="th_nome">Larry</td>
+                    <td>the Bird</td>
+                    <td class="th_email">@twitter</td>
+                    <td><button type="submit" class="btn btn-primary">Ver</button>
+                        <button type="submit" class="btn btn-warning">Alterar</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </td>
+                </tr>
+
             </tbody>
         </table>
     </div>
     <hr>
 
     <!-- Footer -->
-    <footer class="bg-light text-center text-lg-start">
-        <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © 2020 Copyright:
-            <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-        </div>
-        <!-- Copyright -->
-    </footer>
+    <div>
+        <footer class="bg-light text-center text-lg-start ">
+            <!-- Copyright -->
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                © 2022 Copyright: hugonbr
+            </div>
+            <!-- Copyright -->
+        </footer>
+    </div>
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
