--- a/7_FULLSTACK_ALL/0_CSS+Frameworks/Bstrap/0_mytemplate_bootstrap/index.html
+++ b/7_FULLSTACK_ALL/0_CSS+Frameworks/Bstrap/0_mytemplate_bootstrap/index.html
@@ -327,7 +327,7 @@
           <div class="card bg-light">
             <div class="card-body text-center">
               <img src="https://randomuser.me/api/portraits/women/11.jpg" class="rounded-circle mb-3" alt="" />
-              <h3 class="card-title mb-3">Jane Doe</h3>
+              <h3 class="card-title mb-3">Joana D'arc</h3>
               <p class="card-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
@@ -344,7 +344,7 @@
           <div class="card bg-light">
             <div class="card-body text-center">
               <img src="https://randomuser.me/api/portraits/men/12.jpg" class="rounded-circle mb-3" alt="" />
-              <h3 class="card-title mb-3">Steve Smith</h3>
+              <h3 class="card-title mb-3">Carlos Prestes</h3>
               <p class="card-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
@@ -361,7 +361,7 @@
           <div class="card bg-light">
             <div class="card-body text-center">
               <img src="https://randomuser.me/api/portraits/women/12.jpg" class="rounded-circle mb-3" alt="" />
-              <h3 class="card-title mb-3">Sara Smith</h3>
+              <h3 class="card-title mb-3">Sara Oliveira</h3>
               <p class="card-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
