--- a/7_FULLSTACK_ALL/0_CSS+Frameworks/Bstrap/temp2_my/index.html
+++ b/7_FULLSTACK_ALL/0_CSS+Frameworks/Bstrap/temp2_my/index.html
@@ -40,6 +40,7 @@
         }
 
         .margemcar {
+            margin-top: 15%;
             margin-left: 10%;
             margin-right: 10%;
         }
