--- a/7_FULLSTACK_ALL/1_JavaScript_Node+Nestjs/GUI_Browser/Bootstrap/projetos/1_SISWEB-Admin/pages_login/login.html
+++ b/7_FULLSTACK_ALL/1_JavaScript_Node+Nestjs/GUI_Browser/Bootstrap/projetos/1_SISWEB-Admin/pages_login/login.html
@@ -39,7 +39,7 @@
                                         <div class="form-check mb-3">
                                             <input id="show" class="form-check-input" type="checkbox"
                                                 onclick="mostrar()" value="" />
-                                            <label class="form-check-label" for="inputRememberPassword">Mostrar
+                                            <label class="form-check-label" for="show">Mostrar
                                                 Senha</label>
                                         </div>
                                         <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
