--- a/7_FULLSTACK_ALL/1_JavaScript_Node+Nestjs/GUI_Browser/LogicaDeProgramacao/1_Javascript_P1_Intro/02_Botao_Mostrar_Exibir/teste/index.html
+++ b/7_FULLSTACK_ALL/1_JavaScript_Node+Nestjs/GUI_Browser/LogicaDeProgramacao/1_Javascript_P1_Intro/02_Botao_Mostrar_Exibir/teste/index.html
@@ -8,18 +8,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h2>Formulário Temperatura C->F</h2>
 
-    <p>Digite a temperatura em C°:</p>
+    <p>Outro Exemplo</p>
 
-    <input id="input1" />
+    <p id="demo1"><br></p>
 
-    <br />
-    <br />
-
-    <button type="button" onclick="myFunction()">OK</button>
-
-    <p id="r"></p>
+    <button id="exibir">Exibir</button>
+    <button id="ocultar">Ocultar</button>
 
     <script src="myScript.js"></script>
   </body>
