--- a/7_FULLSTACK_ALL/1_JavaScript_Node+Nestjs/YOUTUBE/00_JavaScriptFullCourse/01_temperatureConversion/index.html
+++ b/7_FULLSTACK_ALL/1_JavaScript_Node+Nestjs/YOUTUBE/00_JavaScriptFullCourse/01_temperatureConversion/index.html
@@ -11,7 +11,7 @@
     <label>Enter a temperature:</label><br>
     <input type="number" id="textBox"><br>
 
-    <label>convert to:</label><br>
+    <label>convert:</label><br>
     <input type="radio" id="cButton" name="unit">
     <label for="cButton">Fahrenheit → Celsius</label><br>
     <input type="radio" id="fButton" name="unit">
