--- a/7_FULLSTACK_ALL/1_JavaScript_Node+Nestjs/GUI_Browser/Bootstrap/00_codando/00_site/index.html
+++ b/7_FULLSTACK_ALL/1_JavaScript_Node+Nestjs/GUI_Browser/Bootstrap/00_codando/00_site/index.html
@@ -48,11 +48,24 @@
     <div class="main-content">
 
         <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <strong>Bem-vindo ao meu site!</strong><br> Você pode fechar este alerta.
+            <strong>Bem-vindo ao meu site!</strong> Você pode fechar este alerta.
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     </div>
 
+    <div class="px-4 py-5 my-5 text-center">
+        <img class="d-block mx-auto mb-4" src="img/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+        <h1 class="display-5 fw-bold">Centered hero</h1>
+        <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s
+                most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
+                extensive prebuilt components, and powerful JavaScript plugins.</p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
+                <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+            </div>
+        </div>
+    </div>
 
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
