--- a/1_JavaScript_Node+Nestjs/x-Testes-x/querySelector/index.html
+++ b/1_JavaScript_Node+Nestjs/x-Testes-x/querySelector/index.html
@@ -15,6 +15,9 @@
             font-size: xx-large;
             border-radius: 8px;
         }
+        button{
+            cursor: pointer;
+        }
     </style>
 </head>
 
