--- a/CURSOS/Rocketseat/00_Discover/01_ExerciciosJS/01_TransformarNotas/index.html
+++ b/CURSOS/Rocketseat/00_Discover/01_ExerciciosJS/01_TransformarNotas/index.html
@@ -20,8 +20,9 @@
     <label>Digite uma nota:</label>
     <input id="n" type="number"><br><br>
     <button onclick="converter()">Converter</button>
+    <p id="r"></p>
 
-    <script src="script_ref.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
