--- a/CURSOS/Rocketseat/00_Discover/01_ExerciciosJS/01_TransformarNotas/index.html
+++ b/CURSOS/Rocketseat/00_Discover/01_ExerciciosJS/01_TransformarNotas/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <p>-01_TransformarNotas-</p>
+    <p>01_TransformarNotas</p>
 
     <label>Digite uma nota:</label>
     <input id="n" type="number"><br><br>
