--- a/CURSOS/Rocketseat/00_Discover/00_Frontend/02_secoes_comuns/index.html
+++ b/CURSOS/Rocketseat/00_Discover/00_Frontend/02_secoes_comuns/index.html
@@ -5,34 +5,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>02_secoes_comuns</title>
+    <title>03_secoes_comuns</title>
 </head>
 
 <body>
-
     <header>
-        logomarca
+        logo
         <nav>
             <ul>
-                <li>item 1</li>
-                <li>item 2</li>
-                <li>item 3</li>
+                <li>Início</li>
+                <li>Item</li>
+                <li>Sobre</li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        conteúdo principal
-    </main>
+    <section>
+        <header>
+            <h2>Essa é uma seção</h2>
+            <p>para falar da seção</p>
+        </header>
+        <p>Conteúdo aqui</p>
+    </section>
+    <section>
+        <header>
 
-    <aside>
-        parte lateral
-    </aside>
+        </header>
+    </section>
 
     <footer>
-        rodapé
-    </footer>
+        <header>
 
+        </header>
+    </footer>
 </body>
 
 </html>
