--- a/2_JavaScript_Node+Nestjs/GUI_Browser/Bootstrap/projetos/1_SISWEB-Admin/multi_pages/form_page.html
+++ b/2_JavaScript_Node+Nestjs/GUI_Browser/Bootstrap/projetos/1_SISWEB-Admin/multi_pages/form_page.html
@@ -194,8 +194,10 @@
                                     </div>
                                 </div>
                                 <div class="mt-2 mb-4">
-                                    <button class="btn btn-primary" type="submit"> <a href="../index.html">Create
-                                            Account</a></button>
+                                    <!-- <button class="btn btn-primary" type="submit"> <a href="../index.html">Create
+                                            Account</a></button> -->
+                                    <button class="btn btn-primary" type="submit"> Create
+                                            Account </button>
                                 </div>
                             </form>
                         </div>
