--- a/0_DS_2022/0_logica_DS_2022/javascript/0_HTML/0_olamundo/meuprimeirosite.html
+++ b/0_DS_2022/0_logica_DS_2022/javascript/0_HTML/0_olamundo/meuprimeirosite.html
@@ -10,12 +10,9 @@
 
 <body>
     <h1>Título da minha página</h1>
-    <p>Parágrafo1</p>
-    <p>Parágrafo2</p>
-    <p>Teste</p>
-    teste1<br>
-    teste2<br>
-    teste3<br>
+
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae sit neque doloribus voluptatum, asperiores
+        dolorum totam ad! Ratione quae minima est quo odit? Earum ad cum, molestias aliquam soluta doloremque?</p>
 </body>
 
 </html>
