--- a/0_DS_2022/0_logica_DS_2022/javascript/1_CSS/revisao_aula/index.html
+++ b/0_DS_2022/0_logica_DS_2022/javascript/1_CSS/revisao_aula/index.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SERVER</title>
+    <title>Aula de Revisão</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <p>SERVER</p>
+
+    <p>Teste1</p>
+    <p>Teste2</p>
+
+    <p id="p-teste">Teste3</p>
 </body>
 
 </html>
