--- a/2_JavaScript_Node+Nestjs/GUI_Browser/00_LogicaDeProgramacao/GAME-Pedra_Papel_Tesoura/index.html
+++ b/2_JavaScript_Node+Nestjs/GUI_Browser/00_LogicaDeProgramacao/GAME-Pedra_Papel_Tesoura/index.html
@@ -12,11 +12,13 @@
 <body>
 
   <h3>GAME-Pedra_Papel_Tesoura</h3>
+  <p id="placar">Placar: <span style="color: rgb(255, 255, 0);">Player</span> 0 vs 0 <span style="color: rgb(255, 255, 0);">Computer</span></p>
 
   <button id="pedra" onclick="pedra()">👊</button>
   <button id="papel" onclick="papel()">🖐️</button>
   <button id="tesoura" onclick="tesoura()">✌</button>
   <p></p>
+  <button id="reset" onclick="jogar()">JOGAR</button>
   <button id="reset" onclick="reset()">RESET</button>
 
   <p id="input"><br><br></p>
