--- a/2_JavaScript_Node+Nestjs/GUI_Browser/00_LogicaDeProgramacao/projetos/1_SearchJS/index.html
+++ b/2_JavaScript_Node+Nestjs/GUI_Browser/00_LogicaDeProgramacao/projetos/1_SearchJS/index.html
@@ -15,6 +15,8 @@
     <h2>Central de Buscadores</h2>
     <div id="home">
 
+        <a href="https://www.google.com">google</a>
+
         <h2 id="h_1">Digite uma Pesquisa: </h2>
         <input id="isearch" type="text" style="text-align: center;">
         <p></p>
